--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
+    "axios": "^0.21.1",
+    "chai": "^4.3.4",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "mocha": "^8.4.0",
+    "nodemon": "^2.0.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-elements": "^3.4.1",
+    "react-native-paper": "^4.8.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
