--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "mocha": "^8.4.0",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
