--- a/app.json
+++ b/app.json
@@ -19,9 +19,10 @@
     "ios": {
       "infoPlist": {
         "bundleIdentifier": "com.channell.Brotein"
-      }
+      },
+      "bundleIdentifier": "com.richiec54.Brotein"
     },
-    "supportsTablet": false,
+    "supportsTablet": true,
     "buildNumber": "1.0.4"
   },
   "android": {
