--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.4",
-    "axios": "^0.21.1",
-    "chai": "^4.3.4",
-    "expo": "~41.0.1",
-    "expo-status-bar": "~1.0.4",
-    "mocha": "^8.4.0",
-    "moment": "^2.29.1",
-    "nodemon": "^2.0.7",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-calendars": "^1.1268.0",
-    "react-native-elements": "^3.4.1",
-    "react-native-paper": "^4.8.1",
-    "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
+    "@react-native-async-storage/async-storage": "^1.17.5",
+    "axios": "^0.27.2",
+    "chai": "^4.3.6",
+    "expo": "~45.0.4",
+    "expo-status-bar": "~1.3.0",
+    "mocha": "^10.0.0",
+    "moment": "^2.29.3",
+    "nodemon": "^2.0.16",
+    "react": "17.0.2",
+    "react-dom": "18.1.0",
+    "react-native": "0.68.2",
+    "react-native-calendars": "^1.1284.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-paper": "^4.12.1",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "~0.17.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "react-navigation-tabs": "^2.11.1"
+    "react-navigation-tabs": "^2.11.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.18.2"
   },
   "private": true
 }
