--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native": "0.68.2",
     "react-native-calendars": "^1.1284.0",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.4.2",
     "react-native-paper": "^4.12.1",
+    "react-native-safe-area-context": "^4.2.5",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "~0.17.7",
     "react-navigation": "^4.4.4",
