--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-calendars": "^1.1284.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-vector-icons": "^9.1.0",
