--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "moment": "^2.29.3",
     "nodemon": "^2.0.16",
     "react": "17.0.2",
-    "react-dom": "18.1.0",
+    "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-calendars": "^1.1284.0",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "^2.4.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.1",
-    "react-native-safe-area-context": "^4.2.5",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "~0.17.7",
     "react-navigation": "^4.4.4",
